style.css
/* Set the flex container properties */
.container {
    font-family: "minion-pro", serif;
    font-weight: 400;
    font-style: normal;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  
  /* Set the width of the columns */
  .left-column {
    flex: 1;
    max-width: 50%;
  }
  
  .right-column {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 50%;
    max-width: 500px;
    margin: 0 auto;
    padding: 1rem;
  }
  
  /* Vertically center the image */
  .left-column img {
    display: block;
    margin: 0 auto;
    max-width: 100%;
    height: auto;
  }
  
  /* Style the text in the right column */
  .right-column h1 {
    font-family: "minion-pro-condensed-display", serif;
    font-weight: 700;
    font-style: italic;
    font-size: 2rem;
    text-align: center;
    margin-bottom: 1rem;
  }
  
  .right-column p {
    font-family: "minion-pro", serif;
    font-weight: 400;
    font-style: normal;
    font-size: 1.2rem;
    text-align: center;
    margin-bottom: 2rem;
  }
  
  .right-column a {
    display: block;
    width: 80%;
    max-width: 200px;
    text-align: center;
    padding: 0.5rem;
    font-size: 1.2rem;
    margin: 0 auto;
    transition: all 0.1s ease-in-out;
  }
  
  .right-column a:hover {
    text-decoration: underline;
  }
  
  footer {
    text-align: center;
    margin-top: auto;
    padding: 10px 0;
  }
  h1 {
    font-size: 3em;
    margin-bottom: 0.5em;
    font-family: Minion Pro, serif;
  }
  
  h2 {
    font-size: 1.5em;
    margin-top: 0;
    margin-bottom: 1em;
    font-family: Minion Pro, serif;
  }
  
  .button {
    display: inline-block;
    background-color: #7C4DFF;
    color: #fff;
    font-size: 1.2em;
    padding: 0.5em 1em;
    text-decoration: none;
    border-radius: 5px;
  }
  

